fix para breaks not showing in textarea

--- a/src/components/ItemCard/itemCard.module.css
+++ b/src/components/ItemCard/itemCard.module.css
@@ -23,6 +23,7 @@
 
 .wrap {
   word-wrap: break-word;
+  white-space: pre-wrap;
 }
 
 .url:link,
